# SHL-RAG-Chatbot

./: .env.example  .gitignore  README.md  pyproject.toml
backend/: app.py  brain.py  evaluation.py  pyproject.toml
backend/scraper/: html_parser.py  playwright_scraper.py  product_html_parser.py  request_dl.py  shl_product_dl.py  shl_solutions.csv  shl_solutions_with_details.csv
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: chat-interface.tsx  chat-message.tsx  recommendation-table.tsx  theme-provider.tsx  typing-indicator.tsx
frontend/hooks/: use-chat.ts  use-mobile.ts
frontend/lib/: extract-recommendations.ts  extract-recommendations.tsx
