[project]
name = "shl-rag-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "deepeval>=2.6.7",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.115.12",
    "google-generativeai>=0.8.4",
    "llama-index>=0.12.28",
    "llama-index-embeddings-nvidia>=0.3.3",
    "llama-index-llms-groq>=0.3.1",
    "llama-index-postprocessor-nvidia-rerank>=0.4.3",
    "llama-index-vector-stores-astra-db>=0.4.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "playwright>=1.51.0",
    "pydantic>=2.11.2",
    "tiktoken>=0.9.0",
    "transformers>=4.51.0",
    "webdriver-manager>=4.0.2",
]
